--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "qr": "0.5.3"
+  }
 }
