--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "engines": {
+    "node": ">=24.0.0"
+  },
   "dependencies": {
     "qr": "0.5.3"
   }
